# piggy_bank_server

./: .dockerignore  .editorconfig  .env.example  .env.prod  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  README.md  alembic.ini  deploy_render.py  docker-compose-ngrok.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_render.yaml  deployment.yml  install_python.yml
account_managment/: __init__.py  main.py  server.py
account_managment/accounts/: __init__.py
account_managment/accounts/application/: __init__.py
account_managment/accounts/domain/: __init__.py
account_managment/accounts/infrastructure/: __init__.py
account_managment/accounts/models/: __init__.py
account_managment/alembic/: env.py
account_managment/alembic/versions/: 6e1ec541af29_initial_migration.py  834e15eac3b2_add_password_field_in_user_table.py
account_managment/api/: __init__.py
account_managment/api/v1/: api_v1.py  routers.py
account_managment/api_v1/: __init__.py  api.py  routers.py
account_managment/common/: __init__.py
account_managment/common/config/: database.py  settings.py
account_managment/common/interfaces/: crud_interface.py
account_managment/entities/: entities.py
account_managment/settings/: settings.py
account_managment/shared/: __init__.py  types.py
account_managment/shared/dependencies/: __init__.py  cookies_token.py  current_user.py  send_email.py
account_managment/shared/email/: __init__.py
account_managment/shared/interfaces/: crud_interface.py
account_managment/shared/jwt/: jwt_generator.py
account_managment/shared/utils/: __init__.py  jwt_generator.py
account_managment/user/application/: __init__.py
account_managment/user/domain/: __init__.py
account_managment/user/dtos/: __init__.py  user_register_dto.py  user_signin_dto.py  user_without_password.py
account_managment/user/infrastructure/: __init__.py
account_managment/user/interfaces/: __init__.py  user_interface.py
account_managment/user/models/: __init__.py  user_model.py
account_managment/users/: __init__.py
tests/: tests_email.py
(+50 files in other folders)
