[tool.poetry]
name = "account-managment"
version = "0.1.0"
description = ""
authors = ["Flavio Oria <flavio.oriap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "0.111.0"
bcrypt = "4.1.3"
pyjwt = {extras = ["crypto"], version = "2.8.0"}
python-dotenv = "1.0.1"
emails = "0.6"
jinja2 = "3.1.4"
mjml = "0.11.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.6"}
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
